# django-periodiq

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
django_periodiq/: __init__.py  apps.py
django_periodiq/management/commands/: runperiodiq.py
licenses/: LICENSE_Bogdanp_django_dramatiq
testing/: settings.py
testing/testapp1/: apps.py  tasks.py
testing/testapp2/: apps.py
tests/: command_test.py  config_test.py
