[metadata]
name = django_periodiq
version = 0.2.0
description = A Django app for Periodiq.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/q0w/django-periodiq/
author = q0w
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    django-dramatiq
    periodiq
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
parallel = true
omit =
    */testing/*
    */.nox/*
    noxfile.py

[tool:pytest]
DJANGO_SETTINGS_MODULE = testing.settings
testpaths = tests
python_files = *_test.py
